Fix Replacement Armour errors